* removeAllTasks -> removeAllWindowTasks for clarity * remove startup items from our collection so we don't crash later * a bit more safety by taking the items out of the collection first, then removing them from the UI

BUG:156424

svn path=/trunk/KDE/kdebase/workspace/; revision=765059